2014-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  Explicit use of (double) when processing
	fractional seconds.

	* src/datafile.c:  [xyz]ticlabels were losing resolution due to being
	passed through a float rather than a double.

2014-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix several problems with autoscaling of plots in 
	polar mode (related to Bug #1323).

2014-01-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_palette_defined set_clip set_encoding):
	Fuzz-testing found improper handling of END_OF_COMMAND cases.

2014-01-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (readline, ansi_getc) src/win/wtext.c (WndTextProc)
	src/win/winmain.c (ConsoleGetch):  Builtin-readline: Shift-Tab cycles
	through the list of completions in reverse direction.

	* src/win/winmain.c:  Current version of MinGW does not offer working
	version of __argc/__argv, but _argv/_argv. A web search shows that
	MinGW-w64 is different. This is a bug in MinGW's runtime.

	* win/gnuplot.iss (MinVersion):  Minimum required version of the
	installer is XP.

2014-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix iteration over parametric function plots.
	Bug #1314

	* src/datafile.c (df_generate_pseudodata):  Allow use of '++' pseudofile
	to sample the parametric variables U and V in 3D parametric mode.

2014-01-03  Christoph Bersch <usenet@bersch.net>

	* src/graphics.c (do_key_sample):  Apply requested border around filled
	circle or ellipse used as a key sample.
	Bug #1315

2014-01-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_generate_pseudodata):  Allow use of '+' pseudofile
	to sample the parametric variable T in 2D parametric mode.

2013-12-31  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/graphics.c (get_arrow) src/term.c (do_arc):  The aspect ratio
	of the internal coordinates of the windows terminal is always one.
	Bug #1253
